# rust-project-starter

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/data/: model.rs  schema.rs
src/repository/mongo/: mongo.rs
src/repository/postgres/: postgres.rs
src/routes/: handler.rs  routes.rs
src/utils/: error.rs  info.rs  mod.rs  response.rs
